???? 0.8.4

    user visible changes, client:
    * Fixed: on windows files with '&' in name would not pass checksum check.

    user visible changes, admin:
    * platfotmSpecificHelper methods svn_add_item, svn_remove_item use $(SVN_CLIENT_PATH) instead of plain svn.
    * overhual to do_up2s3, loop on relavent revisions instead of exiating folders.
    * overhual to do_fix_props, make it less verbose and better messages.
    * svn2stage, stage2svn will not use rsync link_dest, because it confuses svn.

    programmer visible changes:
    * new function for windows dos_escape, escapes the & character with ^&

11/2/2014 0.8.3 Shai Shasag <shai@waves.com>

    user visible changes, client:
    * curl connect-timeout = 3 instead of 60
    * improved reporting on config file curl downloads.
    * Fixed: empty config files were created if the number of files to download was smaller than the number of config files. Now each config file will have at least 4 urls.
    * curl: shorter connect-time - 3 sec.
    * curl: shorter max-time - 60sec.
    * curl: three retries
    * create_prefix_instructions_for_item_config_file checks if folder exists before issuing mkdir.
    * sync command: Hack to force untaring of .wtar files by forcing them to be downloaded again.
    * create_config_files will return empty list if there were no files to download.
    * Windows 7za untaring got a -bd flag to reduce verbosity.
    * Windows: errorlevel checking on 7za untaring.
    * Windows: 7za untaring redirect stderr to NUL, because 7za trash-talks no error messages to stderr.

    user visible changes, admin:
    * New command: verify-index, helps admin find problems in index and info map.

    programmer visible changes:
    * quoteme_single, quoteme_double moved to utils for all to enjoy.
    * member install_definitions_index, method read_index, moved to InstlInstanceBase so instlAdmin can also use them.